# FirstPersonDoomLike

./: .gitmodules  CMakeLists.txt  main.c
SDL2/: .gitignore  CMakeLists.txt
SDL2/src/core/winrt/: SDL_winrtapp_direct3d.h
SDL2/src/locale/winrt/: SDL_syslocale.c
SDL2/src/thread/generic/: SDL_syscond.c
SDL2/src/video/: sdlgenblit.pl
SDL2/src/video/haiku/: SDL_BApp.h
SDL2/test/: CMakeLists.txt
include/: cast.h  event.h  point.h  screen.h  sdl2_wrapper.h
include/internal/: eventInternal.h  screenInternal.h
source/: main.c
source/engine/math/: point.c
source/engine/screen/: window.c
source/engine/screen/event/: event.c  mouseEvent.c
source/math/: point.c
source/screen/: window.c
source/screen/event/: event.c  keyEvent.c  mouseEvent.c
test/: test_cast.c  test_event.c  test_keyEvent.c  test_mouseEvent.c  test_point.c  test_template.c  test_window.c
test/include/: unity_wrapper.h
